Ajout des autres formes geometrique