@@ -3,13 +3,21 @@ package geoanalytique.controleur;
 import geoanalytique.exception.ArgumentOperationException;
 import geoanalytique.exception.IncorrectTypeOperationException;
 import geoanalytique.exception.VisiteurException;
+import geoanalytique.graphique.GTexte;
 import geoanalytique.graphique.Graphique;
+import geoanalytique.graphique.GLigne;
 import geoanalytique.gui.GeoAnalytiqueGUI;
 import geoanalytique.model.Cercle;
+import geoanalytique.model.Ellipse;
 import geoanalytique.model.GeoObject;
 import geoanalytique.model.Point;
+import geoanalytique.model.Texte;
 import geoanalytique.model.Segment;
+import geoanalytique.model.Rectangle;
+import geoanalytique.model.Carre;
+import geoanalytique.model.Triangle;
 import geoanalytique.model.ViewPort;
+import geoanalytique.model.Polygone;
 import geoanalytique.util.Dessinateur;
 import geoanalytique.util.Operation;
 
@@ -21,6 +29,8 @@ import java.awt.event.HierarchyBoundsListener;
 import java.awt.event.HierarchyEvent;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseListener;
+import java.awt.Graphics2D;
+
 import java.util.ArrayList;
 
 import javax.swing.JButton;
@@ -47,6 +57,10 @@ public class GeoAnalytiqueControleur implements ActionListener, MouseListener, H
 
 	private Point centreEnCoursCreation = null;
 	private Cercle cercleEnCoursCreation = null;
+	private Ellipse ellipseEnCoursCreation = null;
+	private Point pointDragInitial = null;
+	private Triangle triangleEnCoursCreation = null;
+	private Polygone polygoneEnCoursCreation = null;
 	
         
 		
@@ -72,7 +86,7 @@ public class GeoAnalytiqueControleur implements ActionListener, MouseListener, H
          */
 	public void addObjet(GeoObject obj) {
             objs.add(obj);
-            recalculPoints();	
+            recalculPoints();
             // TODO: a completer
 	}
 	
@@ -122,6 +136,12 @@ public class GeoAnalytiqueControleur implements ActionListener, MouseListener, H
 				cercleEnCoursCreation = null;
 				view.repaint();
 			}
+			else if (currentTool.equals("ELLIPSE") && centreEnCoursCreation != null) {
+				// Réinitialisation des variables pour la prochaine ellipse
+				centreEnCoursCreation = null;
+				ellipseEnCoursCreation = null;
+				pointDragInitial = null;
+			}
 			// reste du code...
 			view.getCanvas().repaint();
 	}
@@ -138,7 +158,7 @@ public class GeoAnalytiqueControleur implements ActionListener, MouseListener, H
 
 	public void mousePressed(MouseEvent e) {
             // TODO: a completer pour un clique souris dans le canevas
-			Point pointClique = new Point((double)(e.getX()-viewport.getCentreX())/40, -((double)(e.getY()-viewport.getCentreY())/40), null);
+			Point pointClique = new Point((double)(e.getX()-viewport.getCentreX())/40, -((double)(e.getY()-viewport.getCentreY())/40), this);
 			// if (currentTool.equals("CIRCLE")) {
 			// 	centreEnCoursCreation = pointClique;
         	// 	cercleEnCoursCreation = new Cercle(centreEnCoursCreation, 0, null);
@@ -146,7 +166,7 @@ public class GeoAnalytiqueControleur implements ActionListener, MouseListener, H
 			// }
 			switch (currentTool) {
 				case "POINT":
-					this.addObjet(new Point("Ori", pointClique.getX(),pointClique.getY(), null));
+					this.addObjet(new Point("Ori", pointClique.getX(),pointClique.getY(), this));
 					break;
 				case "LINE":
 					handleLineCreation(pointClique);
@@ -154,12 +174,52 @@ public class GeoAnalytiqueControleur implements ActionListener, MouseListener, H
 				case "CIRCLE":
 					if (centreEnCoursCreation == null/*  && cercleEnCoursCreation == null */) {
 						centreEnCoursCreation = pointClique;
-						this.addObjet(new Point("Ori", pointClique.getX(),pointClique.getY(), null));
-						cercleEnCoursCreation = new Cercle(centreEnCoursCreation, 0, null);
+						this.addObjet(new Point("Ori", pointClique.getX(),pointClique.getY(), this));
+						cercleEnCoursCreation = new Cercle(centreEnCoursCreation, 0, this);
 						this.addObjet(cercleEnCoursCreation); // Ajouter un cercle temporaire avec rayon 0
 					}
 					break;
+                case "ELLIPSE":
+                    if (centreEnCoursCreation == null) {
+                        centreEnCoursCreation = pointClique;
+                        this.addObjet(new Point("Centre", pointClique.getX(), pointClique.getY(), this));
+                        ellipseEnCoursCreation = new Ellipse(this);
+                        ellipseEnCoursCreation.setCentre(centreEnCoursCreation);
+                        ellipseEnCoursCreation.setRx(0);
+                        ellipseEnCoursCreation.setRy(0);
+                        this.addObjet(ellipseEnCoursCreation); // Ajouter une ellipse temporaire
+                        pointDragInitial = null; // Sera initialisé lors du premier drag
+                    }
+                    break;
+				case "RECTANGLE":
+					handleRectangleCreation(pointClique);
+					break;
+				case "SQUARE":
+					handleSquareCreation(pointClique);
+					break;
+				case "TRIANGLE":
+					handleTriangleCreation(pointClique);
+					break;
+                case "TRIANGLE_RECTANGLE":
+                    handleTriangleRectangleCreation(pointClique);
+                    break;
+                case "TRIANGLE_ISOCELE":
+                    handleTriangleIsoceleCreation(pointClique);
+                    break;
+                case "TRIANGLE_EQUILATERAL":
+                    handleTriangleEquilateralCreation(pointClique);
+                    break;
 				case "TEXT":
+					String texteUtilisateur = demanderTexte("Veuillez entrer un texte:", "Saisie de texte");
+					if (texteUtilisateur != null) {
+						// Utiliser le texte saisi
+						System.out.println("Texte saisi: " + texteUtilisateur);
+						Texte objGTexte = new Texte(pointClique.getX(), pointClique.getY(), texteUtilisateur, this);
+						this.addObjet(objGTexte);
+					} else {
+						// L'utilisateur a annulé
+						System.out.println("Saisie annulée");
+					}
 					break;
 				case "LENGTH":
 				case "SLOPE":
@@ -169,10 +229,14 @@ public class GeoAnalytiqueControleur implements ActionListener, MouseListener, H
 			view.getCanvas().repaint();
 	}
 
+	public String demanderTexte(String message, String titre) {
+		return JOptionPane.showInputDialog(null, message, titre, JOptionPane.QUESTION_MESSAGE);
+	}
+
     public void mouseDragged(MouseEvent e) {
 		if (currentTool.equals("CIRCLE") && centreEnCoursCreation != null && cercleEnCoursCreation != null) {
 			// Calculer la position actuelle de la souris
-			Point pointCourant = new Point((double)(e.getX()-viewport.getCentreX())/40, -((double)(e.getY()-viewport.getCentreY())/40), null);
+			Point pointCourant = new Point((double)(e.getX()-viewport.getCentreX())/40, -((double)(e.getY()-viewport.getCentreY())/40), this);
 			
 			// Calculer le rayon basé sur la distance entre le centre et la position actuelle
 			double rayon = centreEnCoursCreation.calculerDistance(pointCourant);
@@ -181,13 +245,33 @@ public class GeoAnalytiqueControleur implements ActionListener, MouseListener, H
 			objs.remove(cercleEnCoursCreation);
 			
 			// Créer un nouveau cercle avec le rayon mis à jour et l'ajouter
-			cercleEnCoursCreation = new Cercle(centreEnCoursCreation, rayon, null);
+			cercleEnCoursCreation = new Cercle(centreEnCoursCreation, rayon, this);
 			this.addObjet(cercleEnCoursCreation);
 			
 			// Mettre à jour l'affichage
-			// view.getCanvas().clear();
 			recalculPoints();
-			// view.getCanvas().repaint();
+		}
+		else if (currentTool.equals("ELLIPSE") && centreEnCoursCreation != null && ellipseEnCoursCreation != null) {
+			// Calculer la position actuelle de la souris
+			Point pointCourant = new Point((double)(e.getX()-viewport.getCentreX())/40, -((double)(e.getY()-viewport.getCentreY())/40), this);
+			
+			// Initialiser le point initial de drag si c'est le premier déplacement
+			if (pointDragInitial == null) {
+				pointDragInitial = pointCourant;
+			}
+			
+			// Calcul des rayons horizontal et vertical
+			double rx = Math.abs(pointCourant.getX() - centreEnCoursCreation.getX());
+			double ry = Math.abs(pointCourant.getY() - centreEnCoursCreation.getY());
+			
+			// Mise à jour de l'ellipse
+			objs.remove(ellipseEnCoursCreation);
+			ellipseEnCoursCreation.setRx(rx);
+			ellipseEnCoursCreation.setRy(ry);
+			this.addObjet(ellipseEnCoursCreation);
+			
+			// Mettre à jour l'affichage
+			recalculPoints();
 		}
     }
 
@@ -232,6 +316,76 @@ public class GeoAnalytiqueControleur implements ActionListener, MouseListener, H
 			double rayon = centreEnCoursCreation.calculerDistance(clickPoint);
 			cercleEnCoursCreation.setRayon(rayon);
 			// startPoint = null;
+		}
+	}
+
+	private void handleRectangleCreation(Point clickPoint) {
+		if (startPoint == null) {
+			startPoint = clickPoint;
+			this.addObjet(new Point("Ori", clickPoint.getX(), clickPoint.getY(), this));
+		} else {
+			// Le premier point est le coin inférieur gauche, le second définit la largeur et hauteur
+			double largeur = Math.abs(clickPoint.getX() - startPoint.getX());
+			double hauteur = Math.abs(clickPoint.getY() - startPoint.getY());
+			
+			// Déterminer le vrai coin inférieur gauche (peut différer de startPoint selon la direction du drag)
+			double coinX = Math.min(startPoint.getX(), clickPoint.getX());
+			double coinY = Math.min(startPoint.getY(), clickPoint.getY());
+			Point coinInfGauche = new Point(coinX, coinY, this);
+			
+			// Créer le rectangle
+			Rectangle rectangle = new Rectangle(coinInfGauche, largeur, hauteur, this);
+			this.addObjet(rectangle);
+			
+			// Réinitialiser le point de départ
+			startPoint = null;
+		}
+	}
+	
+	private void handleSquareCreation(Point clickPoint) {
+		if (startPoint == null) {
+			startPoint = clickPoint;
+			this.addObjet(new Point("Ori", clickPoint.getX(), clickPoint.getY(), this));
+		} else {
+			// Le premier point est le coin inférieur gauche, le second définit la taille du côté
+			// On prend le max des deux dimensions pour avoir un carré
+			double cote = Math.max(
+				Math.abs(clickPoint.getX() - startPoint.getX()),
+				Math.abs(clickPoint.getY() - startPoint.getY())
+			);
+			
+			// Déterminer le coin inférieur gauche
+			double coinX = Math.min(startPoint.getX(), startPoint.getX() + cote);
+			double coinY = Math.min(startPoint.getY(), startPoint.getY() + cote);
+			Point coinInfGauche = new Point(coinX, coinY, this);
+			
+			// Créer le carré
+			Carre carre = new Carre(coinInfGauche, cote, this);
+			this.addObjet(carre);
+			
+			// Réinitialiser le point de départ
+			startPoint = null;
+		}
+	}
+	
+	private void handleTriangleCreation(Point clickPoint) {
+		if (pointMaintenu == null) {
+			// Premier sommet
+			pointMaintenu = clickPoint;
+			this.addObjet(new Point("A", clickPoint.getX(), clickPoint.getY(), this));
+		} else if (startPoint == null) {
+			// Deuxième sommet
+			startPoint = clickPoint;
+			this.addObjet(new Point("B", clickPoint.getX(), clickPoint.getY(), this));
+		} else {
+			// Troisième sommet, on crée le triangle
+			this.addObjet(new Point("C", clickPoint.getX(), clickPoint.getY(), this));
+			Triangle triangle = new Triangle(pointMaintenu, startPoint, clickPoint, this);
+			this.addObjet(triangle);
+			
+			// Réinitialiser les points
+			pointMaintenu = null;
+			startPoint = null;
 		}
 	}
 
@@ -303,9 +457,30 @@ public class GeoAnalytiqueControleur implements ActionListener, MouseListener, H
             Dessinateur d = new Dessinateur(viewport);
             for (GeoObject o : objs) {
             	Graphique c;
-		try {
+                try {
                     c = o.visitor(d);
                     view.getCanvas().addGraphique(c);
+                    
+                    // Traitement spécial pour les polygones (Rectangle, Carré, Triangle)
+                    if (o instanceof Rectangle) {
+                        // Ajouter les segments 1, 2 et 3 (le segment 0 est déjà ajouté)
+                        Rectangle r = (Rectangle) o;
+                        for (int i = 1; i < 4; i++) {
+                            Segment s = r.getSegment(i);
+                            GLigne ligne = viewport.convert(s.getDebut().getX(), s.getDebut().getY(), 
+                                                           s.getFin().getX(), s.getFin().getY());
+                            view.getCanvas().addGraphique(ligne);
+                        }
+                    } else if (o instanceof Triangle) {
+                        // Ajouter les segments 1 et 2 (le segment 0 est déjà ajouté)
+                        Triangle t = (Triangle) o;
+                        for (int i = 1; i < 3; i++) {
+                            Segment s = t.getSegment(i);
+                            GLigne ligne = viewport.convert(s.getDebut().getX(), s.getDebut().getY(), 
+                                                           s.getFin().getX(), s.getFin().getY());
+                            view.getCanvas().addGraphique(ligne);
+                        }
+                    }
                 } catch (VisiteurException e) {
                     e.printStackTrace();
                 }
@@ -330,16 +505,16 @@ public class GeoAnalytiqueControleur implements ActionListener, MouseListener, H
 				if(res == null)
 					return;
 				if(ope.getClassArgument(i) == Double.class) {
-					ope.setArgument(i, new Double(res));
+					ope.setArgument(i, Double.valueOf(res));
 				}
 				else if(ope.getClassArgument(i) == Integer.class) {
-					ope.setArgument(i, new Integer(res));
+					ope.setArgument(i, Integer.valueOf(res));
 				}
 				else if(ope.getClassArgument(i) == Character.class) {
-					ope.setArgument(i, new Character(res.charAt(0)));
+					ope.setArgument(i, Character.valueOf(res.charAt(0)));
 				}
 				else if(ope.getClassArgument(i) == String.class) {
-					ope.setArgument(i, new String(res));
+					ope.setArgument(i, res);
 				}
 				else if(GeoObject.class.isAssignableFrom(ope.getClassArgument(i))) {
 					ope.setArgument(i, searchObject(res));
@@ -394,4 +569,187 @@ public class GeoAnalytiqueControleur implements ActionListener, MouseListener, H
 		}
 		throw new ArgumentOperationException("Nom de l'objet introuvable");
 	}
+
+    // Méthode pour gérer la création d'une ellipse
+    private void handleEllipseCreation(Point clickPoint) {
+        if (startPoint == null) {
+            // Premier clic: centre de l'ellipse
+            startPoint = clickPoint;
+            this.addObjet(new Point("Centre", clickPoint.getX(), clickPoint.getY(), this));
+        } else if (pointMaintenu == null) {
+            // Deuxième clic: point définissant le rayon horizontal (rx)
+            pointMaintenu = clickPoint;
+            double rx = startPoint.calculerDistance(clickPoint);
+            
+            // Crée une ellipse temporaire (rx = ry pour l'instant)
+            Ellipse ellipseTemp = new Ellipse(this);
+            ellipseTemp.setCentre(startPoint);
+            ellipseTemp.setRx(rx);
+            ellipseTemp.setRy(rx);
+            this.addObjet(ellipseTemp);
+            
+            // Marquer la position pour définir rx
+            this.addObjet(new Point("RX", clickPoint.getX(), clickPoint.getY(), this));
+        } else {
+            // Troisième clic: point définissant le rayon vertical (ry)
+            double rx = startPoint.calculerDistance(pointMaintenu);
+            double ry = Math.abs(clickPoint.getY() - startPoint.getY());
+            
+            // Supprime l'ellipse temporaire (nous la recréerons avec les bonnes dimensions)
+            // Notez que nous devrions conserver une référence à l'ellipse temporaire pour la supprimer
+            // Comme ce n'est pas implémenté, nous allons simplement créer une nouvelle ellipse
+            
+            // Crée l'ellipse finale
+            Ellipse ellipse = new Ellipse(this);
+            ellipse.setCentre(startPoint);
+            ellipse.setRx(rx);
+            ellipse.setRy(ry);
+            this.addObjet(ellipse);
+            
+            // Marquer la position pour définir ry
+            this.addObjet(new Point("RY", clickPoint.getX(), clickPoint.getY(), this));
+            
+            // Réinitialiser les points
+            startPoint = null;
+            pointMaintenu = null;
+        }
+    }
+    
+    // Méthode pour gérer la création d'un triangle rectangle
+    private void handleTriangleRectangleCreation(Point clickPoint) {
+        if (pointMaintenu == null) {
+            // Premier sommet (A)
+            pointMaintenu = clickPoint;
+            this.addObjet(new Point("A", clickPoint.getX(), clickPoint.getY(), this));
+        } else if (startPoint == null) {
+            // Deuxième sommet (B) - un côté de l'angle droit
+            startPoint = clickPoint;
+            this.addObjet(new Point("B", clickPoint.getX(), clickPoint.getY(), this));
+        } else {
+            // Calculer le troisième sommet pour former un angle droit en A
+            // On projette le point cliqué sur l'axe perpendiculaire à AB passant par A
+            
+            // Vecteur AB
+            double abx = startPoint.getX() - pointMaintenu.getX();
+            double aby = startPoint.getY() - pointMaintenu.getY();
+            
+            // Vecteur perpendiculaire à AB (-by, bx)
+            double perpX = -aby;
+            double perpY = abx;
+            
+            // Normalisation du vecteur perpendiculaire
+            double length = Math.sqrt(perpX * perpX + perpY * perpY);
+            perpX /= length;
+            perpY /= length;
+            
+            // Projection du vecteur AC sur le vecteur perpendiculaire
+            double acx = clickPoint.getX() - pointMaintenu.getX();
+            double acy = clickPoint.getY() - pointMaintenu.getY();
+            double proj = acx * perpX + acy * perpY;
+            
+            // Coordonnées du point C pour avoir un angle droit
+            double cX = pointMaintenu.getX() + proj * perpX;
+            double cY = pointMaintenu.getY() + proj * perpY;
+            
+            // Créer le point C
+            Point c = new Point("C", cX, cY, this);
+            this.addObjet(c);
+            
+            // Créer le triangle
+            Triangle triangle = new Triangle(pointMaintenu, startPoint, c, this);
+            this.addObjet(triangle);
+            
+            // Réinitialiser les points
+            pointMaintenu = null;
+            startPoint = null;
+        }
+    }
+    
+    // Méthode pour gérer la création d'un triangle isocèle
+    private void handleTriangleIsoceleCreation(Point clickPoint) {
+        if (pointMaintenu == null) {
+            // Premier sommet (A) - le sommet principal de l'isocèle
+            pointMaintenu = clickPoint;
+            this.addObjet(new Point("A", clickPoint.getX(), clickPoint.getY(), this));
+        } else if (startPoint == null) {
+            // Deuxième sommet (B) - définit la base et la hauteur
+            startPoint = clickPoint;
+            this.addObjet(new Point("B", clickPoint.getX(), clickPoint.getY(), this));
+        } else {
+            // Pour un triangle isocèle, on veut |AB| = |AC|
+            // On utilise la direction indiquée par le troisième clic, mais on ajuste la distance
+            
+            // Distance AB (qui sera égale à AC)
+            double distAB = pointMaintenu.calculerDistance(startPoint);
+            
+            // Direction souhaitée (de A vers le point cliqué)
+            double dirX = clickPoint.getX() - pointMaintenu.getX();
+            double dirY = clickPoint.getY() - pointMaintenu.getY();
+            
+            // Normaliser cette direction
+            double dirLength = Math.sqrt(dirX * dirX + dirY * dirY);
+            dirX /= dirLength;
+            dirY /= dirLength;
+            
+            // Coordonnées du point C à distance |AB| de A dans la direction indiquée
+            double cX = pointMaintenu.getX() + dirX * distAB;
+            double cY = pointMaintenu.getY() + dirY * distAB;
+            
+            // Créer le point C
+            Point c = new Point("C", cX, cY, this);
+            this.addObjet(c);
+            
+            // Créer le triangle
+            Triangle triangle = new Triangle(pointMaintenu, startPoint, c, this);
+            this.addObjet(triangle);
+            
+            // Réinitialiser les points
+            pointMaintenu = null;
+            startPoint = null;
+        }
+    }
+    
+    // Méthode pour gérer la création d'un triangle équilatéral
+    private void handleTriangleEquilateralCreation(Point clickPoint) {
+        if (pointMaintenu == null) {
+            // Premier sommet (A)
+            pointMaintenu = clickPoint;
+            this.addObjet(new Point("A", clickPoint.getX(), clickPoint.getY(), this));
+        } else if (startPoint == null) {
+            // Deuxième sommet (B)
+            startPoint = clickPoint;
+            this.addObjet(new Point("B", clickPoint.getX(), clickPoint.getY(), this));
+        } else {
+            // Pour un triangle équilatéral, on calcule la position du 3ème sommet
+            // à partir des deux premiers et de la contrainte que tous les côtés ont la même longueur
+            
+            // Vecteur AB
+            double abx = startPoint.getX() - pointMaintenu.getX();
+            double aby = startPoint.getY() - pointMaintenu.getY();
+            
+            // Distance AB
+            double distAB = Math.sqrt(abx * abx + aby * aby);
+            
+            // Rotation de 60 degrés
+            double angle = 60 * Math.PI / 180;
+            double rotX = abx * Math.cos(angle) - aby * Math.sin(angle);
+            double rotY = abx * Math.sin(angle) + aby * Math.cos(angle);
+            
+            // Coordonnées du point C
+            double cX = pointMaintenu.getX() + rotX;
+            double cY = pointMaintenu.getY() + rotY;
+            
+            // Créer le point C
+            Point c = new Point("C", cX, cY, this);
+            this.addObjet(c);
+            
+            // Créer le triangle
+            Triangle triangle = new Triangle(pointMaintenu, startPoint, c, this);
+            this.addObjet(triangle);
+            
+            // Réinitialiser les points
+            pointMaintenu = null;
+            startPoint = null;
+        }
+    }
 }
